updates to resume

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </li>       
                 <li>Direct point of contact for client communications, by email and by weekly Zoom meetings, keeping clients engaged and committed to the platform pre-launch, and keeping clients on schedule to launch by contracted date.  On average in 2022, I held 9.1 calls per week with clients, whereas the Strategic team’s average calls per week was 2.6.</li>
                 <li>Ownership of escalations and incident management as it relates to technical issues with launching a storefront or with data migrations. From expertise in this area, introduced and maintained the Migration Runbook document, as well as the Migration plan template within the Implementation team’s GuideCX platform, both of which rolled out to the entire Implementation team as standard practices. </li>
-                <li>Established and improved Implementation team workflows and processes with creation of internal documentation hub (Knowledge Base), provided training seminar to Strategic Implementation team on how to structure client calls, use agendas and Drive folders, collaborated closely with team members on various initiatives, such as the Winback Runbook.
+                <li>Established and improved Implementation team workflows and processes with creation of internal documentation hub (Knowledge Base), provided training seminar to Strategic Implementation team on how to structure client calls, use agendas and Drive folders, collaborated closely with internal team members on various initiatives, such as the Winback Runbook.
                 </li>
                 <li>Participated in interview panels to help hire two new Sr. Implementation Engineers, direct 1:1 mentorship and training of one.
                 </li>
