updates to resume

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="resume-item">
               <h4>Project Engineer</h4>
               <p><em><strong>EDiS Company, Wilmington, DE </strong></em></p>
-              <h5>2017-2021</h5>
+              <h5>June 2017- July 2021</h5>
               <p>
               <ul>
                 <li>Managed 50+ contractors on diverse projects, from football stadiums to historic renovations, ranging from $3-$60 million via running weekly standups, maintaining project agendas, meeting minutes, submittal documentation and client relationships.</li>
