--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Kristin Caras</h4>
-              <p><em>A Senior Implementation Engineer with a degree in Mechanical Engineering, a full stack coding bootcamp graduate and over 6 years of project management expertise.</em></p>
+              <p><em>A Senior Implementation Engineer with a degree in Mechanical Engineering, a full-stack coding bootcamp graduate and over 6 years of project management expertise.</em></p>
             </div>
 
             <h3 class="resume-title">Education</h3>
